--- a/public/index.html
+++ b/public/index.html
@@ -23,22 +23,22 @@
             Example creation usage:
         </h2>
         <p>
-            https://little-url.herokuapp.com/new/https://www.google.com
+            https://sergejuss-url-shortener.herokuapp.com/new/https://www.google.com
         </p>
         <p>
-            https://little-url.herokuapp.com/new/http://foo.com:80
+            https://sergejuss-url-shortener.herokuapp.com/new/http://foo.com:80
         </p>
         <h2>
-            Example creation output
+            Example creation output:
         </h2>
         <p>
-            { "original_url":"http://foo.com:80", "short_url":"https://little-url.herokuapp.com/8170" }
+            { "original_url":"http://foo.com:80", "short_url":"https://sergejuss-url-shortener.herokuapp.com/10" }
         </p>
         <h2>
             Usage:
         </h2>
         <p>
-            https://little-url.herokuapp.com/2871
+            https://sergejuss-url-shortener.herokuapp.com/1
         </p>
         <h2>
             Will redirect to:
