--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="main.css">  
-    <title>Timestamp microservice</title>    
+    <title>Url shortener</title>    
   </head>
   <body>      
   	<h1>
